Fix: application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=fs-backend-chatsystem
+
+spring.datasource.url=jdbc:mysql://localhost:3306/chatsystem
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+
+SOCKET_PORT=3005
+SOCKET_HOST=localhost
