add server potral code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,9 @@ spring.application.name=fs-backend-chatsystem
 spring.datasource.url=jdbc:mysql://localhost:3306/chatsystem
 spring.datasource.username=root
 spring.datasource.password=root
-
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-
+server.port=9008
 SOCKET_PORT=3005
 SOCKET_HOST=localhost
